# ncju

./: .gitignore  README.md  __init__.py  json_tree.py  json_viewer.py  key_handler.py  main.py  myjsontest.json  ncju  pyproject.toml  ui_drawer.py
ncju/: json_tree.py  json_viewer.py  key_handler.py  main.py  size_calculator.py  ui_drawer.py
tests/: test_get_size_in_bytes.py  test_json_tree.py  test_json_viewer.py  test_ui_drawer.py  test_utils.py  utils.py
tests/test_data/: list_of_jsons.json  nested_json.json  nested_json2.json  simple_json.json  simple_list
