[project]
name = "ncju"
version = "0.1.0"
description = "A CLI tool for viewing and navigating JSON files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.5",
    "textual>=0.47.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ncju = "main:main"
